style.css
* {
  margin: 0;
  padding: 0;
}

/* Header Section */

header {
  position: absolute;
  width: 100%;
  height: auto;
  display: flex;
  justify-content: space-between;
  background-color: #3c3a39;
  z-index: 10;
}

.header-container {
  height: 93vh;
}

header > * {
  margin: 0 20px;
  padding: 4px 8px;
  display: flex;
  align-items: center;
  font-size: 1.125em;
  line-height: 24px;
  color: white;
}

.header-container nav {
  width: 100%;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  font-size: 32px;
  font-weight: 700;
}

nav a {
  color: white;
  display: block;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 1em;
  line-height: 20px;
  text-decoration: none;
}

footer a {
  margin: 10px;
  color: #505f79;
  font-size: 1.1875em;
}

.social-media a {
  margin: 10px;
  color: #dbd8d7;
  font-size: 1.1875em;
}

.header-container nav a {
  width: 100%;
  border-bottom: 1px solid #6f6c6b;
  padding: 1.75rem 0 1rem;
}

#exit-icon {
  order: -1;
  align-self: flex-end;
  margin: 10px 0 0;
}

.menu-indicator {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 7vh;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.menu-indicator img {
  padding: 10px;
}

.hide {
  display: none;
}

/* Button Section */

button:enabled {
  background-color: #cc4b00;
  color: white;
  border: 1px solid #cc4b00;
  cursor: pointer;
}

button:hover {
  background-color: white;
  color: #cc4b00;
  transition-duration: 0.4s;
}

.gen-desc button {
  margin: 20px 0;
}

button:disabled {
  background-color: #f4f1f0;
  color: #5b5957;
  border-color: #f4f1f0;
  cursor: none;
}

button:enabled:active {
  background-color: #cc4b00;
  color: white;
  border-color: #cc4b00;
}

/* Body Section */

.container {
  position: relative;
  width: 100%;
  top: 50px;
}

/* Headline Section */

.headline {
  min-height: 590px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #1c1a19;
  background-image: url('assets/images/Headline-Illustration.png');
  background-repeat: no-repeat;
  background-position-x: calc(100% + 375px);
  background-position-y: 35vh;
  background-size: 85vh;
}

.headline > * {
  margin: 5px 20px;
  width: 330px;
}

h1 {
  animation-duration: 2s;
  animation-name: slidein;
}

.headline h1,
.heading-text {
  font-family: 'Crete Round', sans-serif;
  font-weight: 400;
  font-size: 3.5em;
  line-height: 64px;
  letter-spacing: 0.37px;
  color: #ff6b00;
}

.supporting-text h2 {
  font-family: 'Roboto', sans-serif;
  font-weight: 700;
  font-size: 1.5em;
  line-height: 32px;
  color: #fff5e1;
  animation-duration: 4s;
  animation-name: slidein;
}

.description {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-size: 1em;
  line-height: 24px;
  color: #fff;
}

.social-media {
  display: flex;
}

/* Works Section */

.recent-works {
  margin: 80px 6% 120px;
  row-gap: 25px;
}

.recent-works h2 {
  font-family: 'Crete Round', sans-serif;
  font-weight: 400;
  font-size: 2.5em;
  text-align: center;
  color: #1c1a19;
  margin-bottom: 60px;
  padding-bottom: 25px;
  border-bottom: 1px solid #212121;
}

.card-works {
  display: grid;
  gap: 25px;
}

.featured,
.card {
  display: flex;
  flex-direction: column;
  row-gap: 25px;
}

.right-block {
  display: flex;
  flex-direction: column;
  row-gap: 12px;
}

.right-block h3 {
  font-family: 'Crete Round', sans-serif;
  font-weight: 400;
  font-size: 2em;
  line-height: 44px;
  color: #091e42;
}

.right-block p {
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 1em;
  line-height: 24px;
  color: #091e42;
}

.skills li {
  color: white;
  display: flex;
  flex-direction: column;
  font-family: 'Inter', sans-serif;
  font-size: 2em;
  font-weight: 700;
  line-height: 44px;
  list-style: none;
  row-gap: 12px;
}

.right-block .tags {
  column-gap: 2%;
  display: flex;
  list-style: none;
}

.skill-type li {
  font-family: 'Inter', sans-serif;
  font-size: 0.7em;
  font-weight: 400;
  line-height: 43px;
  text-align: center;
}

.right-block .tags li {
  font-family: 'Inter', sans-serif;
  font-weight: 500;
  font-size: 1em;
  line-height: 20px;
  text-decoration: none;
  padding: 10px 12px;
  border: 1px solid #8993a4;
  color: #091e42;
}

.right-block .tags li:hover {
  font-size: 1.125em;
  padding: 10px 18px;
  font-weight: 600;
  transition-duration: 0.2s;
}

.btn {
  padding: 12px;
  font-family: 'Inter', sans-serif;
  font-weight: 700;
  font-size: 1.0625em;
  line-height: 24px;
}

.featured-btn {
  width: 120px;
}

.card img {
  position: absolute;
  z-index: -1;
  width: 88%;
  height: 390px;
  filter: brightness(80%);
}

.card .right-block {
  flex-direction: column-reverse;
  height: 390px;
}

.card h3,
.card p,
.card ul {
  padding: 0 15px;
  color: white;
}

.card h3 {
  order: 3;
}

.card p {
  order: 2;
}

.card ul {
  order: 1;
}

.card .right-block .tags li {
  border: none;
  background: rgba(255, 255, 255, 0.24);
  color: white;
}

/* About Section */

.about {
  list-style: none;
  min-height: 1800px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #1c1a19;
  background-image: url('assets/images/About-Illustration.png');
  background-repeat: no-repeat;
  background-size: 72.5vh;
  background-position-x: calc(100% + 275px);
  background-position-y: 18%;
}

.gen-desc {
  width: 88%;
  margin-bottom: 240px;
}

.gen-desc > * {
  margin: 6px 0;
}

.paragraph-text {
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 1em;
  line-height: 24px;
  color: white;
}

/* Skills Section */

.skills {
  height: 1200px;
  width: 85%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-top: 1px solid white;
  row-gap: 24px;
}

.sub-skills {
  display: flex;
  column-gap: 10px;
  align-items: center;
}

.sub-skills img {
  width: 18px;
  height: 18px;
}

.skill-type {
  display: flex;
  flex-direction: column;
  row-gap: 12px;
}

/* Contact form */

.form-container {
  display: grid;
  margin: 125px 6% 0;
}

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
}

.contact-text {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 2em;
  line-height: 44px;
  text-align: center;
  color: #172b4d;
  margin-bottom: 60px;
}

.input-field,
.textarea-field {
  width: 327px;
  border: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1em;
  line-height: 24px;
  background: #fbf8f7;
}

.input-field {
  height: 48px;
  border-bottom: 1px solid #dbd8d7;
}

.textarea-field {
  height: 114px;
}

footer {
  margin: 100px 0 55px;
  display: flex;
  justify-content: center;
  background-image: url('assets/images/Bar.png');
  background-repeat: no-repeat;
  background-size: 33%;
  background-position-x: 50%;
  background-position-y: 100%;
}

/* Animations */

.description p {
  animation-duration: 5s;
  animation-name: slidein;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

@media screen and (min-width: 768px) {
  #logo {
    margin-left: 140px;
  }

  nav {
    margin-right: 140px;
  }

  nav > * {
    margin: 0 15px;
  }

  .nav-mobile {
    display: none;
  }

  .nav-desktop {
    display: block;
  }

  .headline {
    display: grid;
    height: 870px;
    grid-template-columns: 140px 560px 1fr;
    grid-template-rows: repeat(5, 1fr);
    background-color: #1c1a19;
    background-image: url('assets/images/Headline-Illustration.png');
    background-repeat: no-repeat;
    background-position-x: 92vh;
    background-position-y: 88%;
    background-size: 200vh;
  }

  .primary-text,
  .supporting-text,
  .description {
    grid-column: 2;
    width: 560px;
  }

  .primary-text {
    grid-row: 1/5;
    margin-bottom: 40px;
  }

  .supporting-text {
    grid-row: 3;
  }

  .description {
    grid-row: 2/6;
  }

  .social-media {
    order: -1;
    display: flex;
    flex-direction: column;
    grid-row: 3;
  }

  .recent-works {
    display: flex;
    flex-direction: column;
    margin: 135px 10% 120px;
    background-image: url('assets/images/Bar.png');
    background-repeat: no-repeat;
    background-position: 95% 30px;
    background-size: calc(95% - 300px) 2px;
  }

  .recent-works h2 {
    align-self: flex-start;
    border: none;
  }

  .featured {
    display: grid;
    grid-template-columns: 3fr 2fr;
    align-items: flex-start;
    column-gap: 20px;
    grid-column: 1 /4;
  }

  .featured img,
  .featured .right-block {
    width: 100%;
  }

  .card-works {
    grid-template-columns: repeat(3, 31.4%);
  }

  .card img {
    width: 25.12%;
  }

  .about {
    align-items: flex-start;
    background-image: url('assets/images/About-Illustration.png');
    background-repeat: no-repeat;
    background-position-x: 105.5vh;
    background-position-y: 10%;
    background-size: 100vh;
    min-height: 1000px;
  }

  .gen-desc {
    max-width: 540px;
    margin: 130px 0 0 10%;
  }

  .skills {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: baseline;
    margin: 10%;
    padding-top: 140px;
    width: 80%;
    height: 400px;
  }

  .form-container {
    grid-template-columns: 1fr 2fr;
    margin: 0 10%;
    padding: 125px 0 180px;
    column-gap: 25px;
  }

  .contact-text {
    width: 330px;
    text-align: left;
  }

  .contact-form {
    align-items: flex-start;
  }

  .contact-form > input,
  .contact-form > textarea {
    width: 100%;
  }

  footer {
    background-image: none;
    margin: 0 10%;
  }

  @media screen and (max-width: 980px) {
    .card .right-block h3 {
      font-size: 1.5em;
    }

    .card .right-block p {
      font-size: 0.75em;
    }

    .card .right-block .tags {
      column-gap: 6px;
      padding: 0 5%;
    }

    .card .right-block .tags li {
      font-size: 0.75em;
      padding: 5px 9px;
    }
  }
}

